--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.9.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
