--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13",
     "@element-plus/icons-vue": "^2.3.1",
-    "element-plus": "^2.9.10"
+    "axios": "^1.9.0",
+    "element-plus": "^2.9.10",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "fast-glob": "^3.3.3",
+    "globals": "^16.1.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^2.2.8", 
-    "fast-glob": "^3.3.3",
-    "globals": "^16.1.0"
+    "vue-tsc": "^2.2.8",
+    "sass-embedded": "1.86.1"
   }
 }
