--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "fast-glob": "^3.3.3",
     "globals": "^16.1.0",
+    "sass-embedded": "1.86.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^2.2.8",
-    "sass-embedded": "1.86.1"
+    "vue-tsc": "^2.2.8"
   }
 }
